the wrap div is no longer .wrap but #wrap

--- a/public/stylesheets/base.less
+++ b/public/stylesheets/base.less
@@ -193,12 +193,12 @@ body {
   height: @footer-height;
 }
 
-.wrap > .container {
+#wrap > .container {
   padding-top: 60px;
   margin-bottom: 60px;
 }
 
-.wrap > .container-fluid {
+#wrap > .container-fluid {
   padding-top: 60px;
   margin-bottom: 60px;
 }
